--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -971,6 +971,7 @@ CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
 StaticMeshComponent.AssetUserData=False
+EdGraph.Graph=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -993,7 +994,7 @@ InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisC
 PhysicsSettings="\"Object.Replication.PhysicErrorCorrection\" \"Object.Broadphase.DefaultBroadphaseSettings\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPBounds\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPOuterBounds\" \"Object.ChaosPhysics.ChaosSettings\" \"Object.ChaosPhysics.SolverOptions\" \"Object.ChaosPhysics.SolverOptions.CollisionFilterSettings\" \"Object.ChaosPhysics.SolverOptions.BreakingFilterSettings\" \"Object.ChaosPhysics.SolverOptions.TrailingFilterSettings\" "
 PhysicsSettingsCore="\"Object.Replication.PhysicErrorCorrection\" \"Object.Broadphase.DefaultBroadphaseSettings\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPBounds\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPOuterBounds\" \"Object.ChaosPhysics.ChaosSettings\" \"Object.ChaosPhysics.SolverOptions\" \"Object.ChaosPhysics.SolverOptions.CollisionFilterSettings\" \"Object.ChaosPhysics.SolverOptions.BreakingFilterSettings\" \"Object.ChaosPhysics.SolverOptions.TrailingFilterSettings\" "
 RendererSettings="\"Object.Experimental.Experimental|LOD Streaming\" \"Object.Experimental.Experimental|LOD Streaming.Experimental|LOD Streaming|Skeletal Mesh\" "
-UserInterfaceSettings="\"Object.DPI Scaling.DPI Scaling|Scale To Fit Rule\" "
+UserInterfaceSettings="\"Object.DPI Scaling.UIScaleCurve\" \"Object.DPI Scaling.DPI Scaling|Scale To Fit Rule\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 EditorProjectAppearanceSettings="\"Object.Units.DistanceUnits\" \"Object.Units.MassUnits\" \"Object.Units.TimeUnits\" "
 ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths\" \"Object.ClassVisibilityManagement.InternalOnlyClasses\" "
@@ -1002,7 +1003,7 @@ PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Obje
 UMGEditorProjectSettings="\"Object.Compiler.DefaultCompilerOptions\" \"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|Stream Caching\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
 IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|Stream Caching\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
-LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
+LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" \"Object.Audio.Audio|CookOverrides\" "
 WindowsTargetSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|Stream Caching\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
 LiveLinkSettings="\"Object.LiveLink.DefaultRoleSettings\" \"Object.LiveLink.DefaultRoleSettings.DefaultRoleSettings[0]\" \"Object.LiveLink.LiveLink|UI\" \"Object.LiveLink.LiveLink|UI.LiveLink|UI|Debug\" "
 MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
@@ -1015,13 +1016,15 @@ Character=
 Pawn=
 RotatingMovementComponent=
 MovementComponent=
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent=
 Player_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
+LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
+MacTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1161,6 +1164,10 @@ K2Node_VariableGet=ThirdPersonCharacter_Female_C.Physics.ConstraintsGroup,ThirdP
 PropertyWrapper=ThirdPersonCharacter_Female_C.Physics.ConstraintsGroup,ThirdPersonCharacter_Female_C.Collision.Collision,
 ThirdPersonCharacter_C=ThirdPersonCharacter_Female_C.Physics.ConstraintsGroup,ThirdPersonCharacter_Female_C.Collision.Collision,
 PlayerStart=ThirdPersonCharacter_Female_C.Physics.ConstraintsGroup,ThirdPersonCharacter_Female_C.Collision.Collision,
+MovieSceneTakeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
+TakeRecorderMicrophoneAudioSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
+MovieSceneAnimationTrackRecorderEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
+TakeRecorderWorldSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
