изменена логика поворота вокруг врага
изменена логика поворота вокруг врага

--- a/Saved/Config/Windows/Input.ini
+++ b/Saved/Config/Windows/Input.ini
@@ -4,5 +4,6 @@ HistoryBuffer=t.MaxFPS 1000
 HistoryBuffer=t.MaxFPS 4
 HistoryBuffer=t.MaxFPS 10
 HistoryBuffer=t.MaxFPS 100
-HistoryBuffer=Stat FPS
+HistoryBuffer=stat f
+HistoryBuffer=stat fps
 
